--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,16 @@
 spring:
+  profiles:
+    active: local
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:testdb
+  jpa:
+    properties:
+      hibernate.format_sql: true
+
+#JPA SQL
+logging:
+  level:
+    org.hibernate.type: TRACE
+    org.hibernate.SQL: DEBUG
+
