chore: java targetCompatibility 추가

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ plugins {
 group = 'hello'
 version = '0.0.1-SNAPSHOT'
 
+targetCompatibility = 11
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
