--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,10 +13,12 @@ spring:
   jpa:
     properties:
       hibernate.format_sql: true
-
-#JPA SQL
+  output:
+    ansi:
+      enabled: always
 logging:
   level:
     org.hibernate.type: TRACE
     org.hibernate.SQL: DEBUG
+
 
