자동 구성에 Environment 프로퍼티 적용

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,12 +13,13 @@ spring:
   jpa:
     properties:
       hibernate.format_sql: true
-  output:
-    ansi:
-      enabled: always
 logging:
   level:
     org.hibernate.type: TRACE
     org.hibernate.SQL: DEBUG
+
+
+my.name: ApplicationProperties
+contextPath: /app
 
 
