--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,4 +22,8 @@ logging:
 my.name: ApplicationProperties
 server.contextPath: /app
 server.port: 9090
+data.driver-class-name: org.h2.Driver
+data.url: jdbc:h2:mem:test
+data.username: sa
+data.password:
 
